--- a/overlay-aosp/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-aosp/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -27,4 +27,6 @@
     <integer name="config_maxVisibleNotificationIcons">6</integer>
     <integer name="config_maxVisibleNotificationIconsWhenDark">7</integer>
 
+    <!-- Color of the FOD view -->
+    <color name="config_fodColor">#ccccac</color>
 </resources>
